--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="lista-menu_item"> <a href="#"> greak </a> </li>
             </u1>
 
-           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
+           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a> coldest moments at basketball
         </div>
         <div class="container">
            <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
