--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <li class="lista-menu_item"> <a href="#"> greak </a> </li>
             </u1>
 
-           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a> coldest moments at basketball
-        </div>
+           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a> 
+           <h1 class="titulo__cabecalho">basketball photos</h1>
         <div class="container">
            <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
            <a href="#"><img class="container__imagem" src="img/Emprestimos.svg" alt="meus emprestimos"></a>
